# PSC-CurrentAffairs-Agent

./: .env.example  INSTRUCTIONS.md  README.md  docker-compose.yml  pyproject.toml  start.bat
app/: main.py
app/api/: deps.py
app/api/routes/: news.py  quiz.py
app/core/: config.py  logging.py
app/db/: session.py
app/models/: processed_article.py  quiz.py  raw_article.py
app/schemas/: article.py  quiz.py
app/services/classifier/: filter.py
app/services/dedup/: exact.py  semantic.py
app/services/llm/: client.py  prompts.py  validator.py
app/services/quiz/: generator.py
app/services/scraper/: html.py  rss.py
app/workers/: celery_app.py  schedule.py  tasks.py
docker/: Dockerfile  entrypoint.sh
frontend/: archive.html  index.html  quiz.html
frontend/static/css/: style.css
frontend/static/js/: archive.js  feed.js  quiz.js
scripts/: docker-start.ps1  docker-start.sh  init_db.py  install_linux.sh  install_windows.ps1  run_pipeline.py
tests/: test_classifier.py  test_dedup.py  test_llm.py  test_quiz.py  test_scraper.py
