[project]
name = "psc-current-affairs-agent"
version = "0.1.0"
description = "Local-first, AI-powered current affairs system for Kerala PSC exam preparation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.2",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "celery>=5.4.0",
    "redis>=5.0.4",
    "sentence-transformers>=3.0.1",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
